Fixed scheduled page when gift was scheduled and fees were covered

--- a/client/views/donation_landing/donation_landing.less
+++ b/client/views/donation_landing/donation_landing.less
@@ -1,6 +1,6 @@
 .Donation-Landing {
   p, h1, h2, h3, h4, h5, h6 {
-    font-size: .9em;
+    font-size: .8em;
   }
   a:link {color:#128c84;}     /* unvisited link  */
   a:visited {color:#128c84;}  /* visited link */
@@ -16,13 +16,6 @@
 
   .Wide1 {
     background: transparent;
-  }
-
-  /* changed this to get the right height after adding a larger image */
-  .container_12 .grid_8 {
-    width: 985px;
-    height: 620px;
-    margin-left: 18px;
   }
 
   .well1 {
@@ -75,11 +68,6 @@
     margin-left: 0;
   }
 
-  #recent_posts-2 a img {
-    width: 60px;
-    height: 60px;
-    border:0;
-  }
   /* iphone */
   @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
     img { max-width: 100%; }
@@ -129,14 +117,21 @@
     margin-right: auto;
   }
   .gradiant-button {
-    background-image: -webkit-linear-gradient(top,#5cb85c 0,#419641 100%);
+    /*background-image: -webkit-linear-gradient(top,#5cb85c 0,#419641 100%);
     background-image: -o-linear-gradient(top,#5cb85c 0,#419641 100%);
     background-image: -webkit-gradient(linear,left top,left bottom,from(#5cb85c),to(#419641));
     background-image: linear-gradient(to bottom,#5cb85c 0,#419641 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5cb85c', endColorstr='#ff419641', GradientType=0);
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
     background-repeat: repeat-x;
-    border-color: #3e8f3e;
+    border-color: #3e8f3e;*/
+    /*background-image: -webkit-linear-gradient(top,#128c84 0,#00A89D 100%);
+    background-image: -o-linear-gradient(top,#128c84 0,#00A89D 100%);
+    background-image: -webkit-gradient(linear,left top,left bottom,from(#128c84),to(#00A89D));
+    background-image: linear-gradient(to bottom,#128c84 0,#00A89D 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5cb85c', endColorstr='#ff419641', GradientType=0);
+    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);*/
+    background-color: #128c84;
   }
   .gradiant-button-gray {
     background-image: -webkit-linear-gradient(top,#ebeef0 0,#99a7b0 100%);
@@ -158,6 +153,6 @@
     text-transform: uppercase;
   }
   .v-top {
-    padding-top: 15px;
+    padding-top: 12px;
   }
 }
